.devcontainer/apps/easytrade/kustomize/base/environment/easytrade-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: easytrade
  labels:
    app: easytrade
  name: easytrade-ingress
  annotations:
    meta.helm.sh/release-name: easytrade
spec:
  ingressClassName: "traefik"
  rules:
  - host: "easytrade.34.28.152.103.nip.io"
    http:
      paths:
      - backend:
          service:
            name: frontendreverseproxy-easytrade
            port: 
              number: 80
        path: /
        pathType: Prefix
